Fixed alignment for custom dropdown with icons

--- a/src/06-components/atoms/custom-dropdown-icon/custom-dropdown-icon.scss
+++ b/src/06-components/atoms/custom-dropdown-icon/custom-dropdown-icon.scss
@@ -12,6 +12,7 @@ custom-dropdown {
 
     span {
       padding-left: $S;
+      vertical-align: top;
     }
   }
 
